Fixed a UI layout bug on Clinic Manager adder for super wide screens

--- a/src/sass/openeyes/__config-all.scss
+++ b/src/sass/openeyes/__config-all.scss
@@ -27,7 +27,7 @@ $oe-event-header-height:				38px; 	// SEM header
 $oe-event-sidebar-width:				200px;	// SEM sidebar
 $oe-event-main-default-width:			1080px; // SEM for minimum support monitors (+ sidebar is 1280px)
 $oe-hotlist-panel-width:				450px; 	// hotlist list panel - MIN
-$oe-hotlist-panel-max:					600px; 	// hotlist list panel - MAX
+$oe-hotlist-panel-max:					34vw; 	// hotlist list panel - MAX
 $oe-eyedraw-app-width:					1080px;  // eyedraw popup app
 $oe-add-insert-popup-height:			204px; 	// Adder Popup
 $oe-date-width:							80px;	// normal
